--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </nav>
       </header>
 
-      <a class="button-store" href="comprar.html">Adicionar ao carrinho</a>
+      <a class="button-store -second" href="comprar.html"
+        >Adicionar ao carrinho</a
+      >
       <a class="button-store" href="comprar.html">Comprar</a>
     </div>
   </body>
