--- a/index.html
+++ b/index.html
@@ -10,29 +10,79 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/eset.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/container-store.css" />
     <link rel="stylesheet" href="css/header-store.css" />
+    <link rel="stylesheet" href="css/photo-product.css" />
+    <link rel="stylesheet" href="css/wrap-product.css" />
+    <link rel="stylesheet" href="css/description-product.css" />
+    <link rel="stylesheet" href="css/star.css" />
     <link rel="stylesheet" href="css/button-store.css" />
   </head>
 
   <body>
     <div class="container-store">
       <header class="header-store">
-        <h1 class="title">LOGO</h1>
+        <h1 class="title">Logo</h1>
+
         <nav class="navigation">
+          <input type="search" placeholder="Busca" />
+
           <a class="action" href="http://collabcode.training">Produtos</a>
           <a class="action" href="http://collabcode.training">Serviços</a>
-          <a class="action last" href="http://collabcode.training"
+          <a class="action -last" href="http://collabcode.training"
             >Carrinho (10)</a
           >
         </nav>
       </header>
 
-      <a class="button-store -second" href="comprar.html"
-        >Adicionar ao carrinho</a
-      >
-      <a class="button-store" href="comprar.html">Comprar</a>
+      <figure class="photo-product">
+        <img src="/img/fone.png" alt="Fone de ouvido" />
+      </figure>
+
+      <section class="wrap-product">
+        <dl class="description-product">
+          <dt class="title">Fone top, feliz e caro</dt>
+
+          <dd class="item -heart">
+            <img src="img/heart.png" alt="Like" />
+          </dd>
+
+          <dd class="item -star">
+            <!-- Atalho img*5[src=/img/star-enabled.png]   -->
+            <img src="/img/star-active.png" alt="Estrela habilitada" />
+            <img src="/img/star-active.png" alt="Estrela habilitada" />
+            <img src="/img/star-active.png" alt="Estrela habilitada" />
+            <img src="/img/star-active.png" alt="Estrela habilitada" />
+            <img src="/img/star.png" alt="Estrela desabilitada" />
+          </dd>
+
+          <dd class="item">4.0 (97)</dd>
+          <dd class="item -info">
+            <strong class="contrast">Frete</strong>C$ 108
+          </dd>
+          <dd class="item -info -last">
+            <strong class="contrast">Preço</strong> C$ 340
+          </dd>
+
+          <dd class="text">
+            Fone TOP com um cor feliz que não tem fio. A cor também é algo que
+            impressiona junto com o seu layout modernão! Ele é caro? É! Mas
+            compre que você não vai se arrepender e se você se arrepender pode
+            vender no mercado livre..kkkk
+          </dd>
+
+          <dd class="text -more">
+            <a class="action" href="">Saber mais...</a>
+          </dd>
+        </dl>
+
+        <div class="buttons">
+          <button class="button-store -second">Adicionar ao carrinho</button>
+          <a class="button-store" href="comprar.html">Comprar</a>
+        </div>
+      </section>
     </div>
   </body>
 </html>
