--- a/index.html
+++ b/index.html
@@ -46,16 +46,32 @@
           <dt class="title">Fone top, feliz e caro</dt>
 
           <dd class="item -heart">
-            <img src="img/heart.png" alt="Like" />
+            <img class="icon" src="img/heart.png" alt="Like" />
           </dd>
 
           <dd class="item -star">
             <!-- Atalho img*5[src=/img/star-enabled.png]   -->
-            <img src="/img/star-active.png" alt="Estrela habilitada" />
-            <img src="/img/star-active.png" alt="Estrela habilitada" />
-            <img src="/img/star-active.png" alt="Estrela habilitada" />
-            <img src="/img/star-active.png" alt="Estrela habilitada" />
-            <img src="/img/star.png" alt="Estrela desabilitada" />
+            <img
+              class="icon"
+              src="/img/star-active.png"
+              alt="Estrela habilitada"
+            />
+            <img
+              class="icon"
+              src="/img/star-active.png"
+              alt="Estrela habilitada"
+            />
+            <img
+              class="icon"
+              src="/img/star-active.png"
+              alt="Estrela habilitada"
+            />
+            <img
+              class="icon"
+              src="/img/star-active.png"
+              alt="Estrela habilitada"
+            />
+            <img class="icon" src="/img/star.png" alt="Estrela desabilitada" />
           </dd>
 
           <dd class="item">4.0 (97)</dd>
